@@ -1,3 +1,8 @@
+2007-08-27  Brian Gough  <bjg@network-theory.co.uk>
+
+	* tridiag.c: use GSL_ERROR for failed allocation, signal
+	 GSL_EZERODIV if matrix is not positive definite
+
 2007-08-17  Brian Gough  <bjg@network-theory.co.uk>
 
 	* svd.c (gsl_linalg_SV_decomp): bail out if number of iterations
